[gd_scene load_steps=5 format=3 uid="uid://cisagds23nh38"]

[ext_resource type="Script" path="res://Menus/EndScene/EndScene.gd" id="1_8o7dk"]
[ext_resource type="Texture2D" uid="uid://bca71nrl57kf0" path="res://Assets/fish1.png" id="2_85afm"]
[ext_resource type="Texture2D" uid="uid://ch22iocfbkhp5" path="res://Assets/Main_menu_background.jpg" id="2_hg1qf"]
[ext_resource type="AudioStream" uid="uid://7ng2yu2522ov" path="res://Music/Pachelbel - Canon in D Major (Original Version).mp3" id="4_tv7t4"]

[node name="EndScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8o7dk")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1764.5, 1111.5)
scale = Vector2(7.64009, 8.52692)
texture = ExtResource("2_hg1qf")

[node name="ReturnHome" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -305.5
offset_top = -387.0
offset_right = 305.5
offset_bottom = -203.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 68
text = "Return Home"

[node name="PlayerIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.5
offset_top = -375.5
offset_right = 375.5
offset_bottom = 375.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_85afm")

[node name="Winner" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 220.0
offset_right = 388.0
offset_bottom = 357.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "winner: Player 1"
horizontal_alignment = 1

[node name="P2" type="Label" parent="."]
layout_mode = 0
offset_left = 2584.0
offset_top = 376.0
offset_right = 2970.0
offset_bottom = 513.0
theme_override_font_sizes/font_size = 100
text = "Player 2
"

[node name="P2Score" type="Label" parent="."]
layout_mode = 0
offset_left = 2584.0
offset_top = 537.0
offset_right = 2970.0
offset_bottom = 674.0
theme_override_font_sizes/font_size = 80
text = "120"
horizontal_alignment = 1

[node name="P1Score" type="Label" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 537.0
offset_right = 898.0
offset_bottom = 674.0
theme_override_font_sizes/font_size = 80
text = "120"
horizontal_alignment = 1

[node name="P1" type="Label" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 376.0
offset_right = 898.0
offset_bottom = 513.0
theme_override_font_sizes/font_size = 100
text = "Player 1"

[node name="Outro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tv7t4")
volume_db = 2.0

[connection signal="pressed" from="ReturnHome" to="." method="_on_return_home_pressed"]
